--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -31,6 +31,8 @@ h1, h2, h3, h4, h5, h6 {
 
 h1 {
   font-size: 3em;
+  font-style: italic;
+  font-weight: bold;
   letter-spacing: -2px;
   margin-bottom: 30px;
   text-align: center;
@@ -52,21 +54,44 @@ p {
 
 /* ヘッダー */
 
+#header {
+  background-color: #008080;
+}
+
+a {
+  font-weight: bold;
+  color: #fff !important;  
+  &:hover {
+    color: #808080 !important;
+    text-decoration: none;
+  }
+}
+
+#header-list {
+  font-weight: bold;
+  color: #fff !important;  
+  &:hover {
+    color: #808080 !important;
+    text-decoration: none;
+  }
+}
+
+
 #logo {
   float: left;
   margin-right: 10px;
   font-size: 1.7em;
-  color: #fff;
-  text-transform: uppercase;
+  color: #fff; 
   letter-spacing: -1px;
   padding-top: 9px;
   font-weight: bold;
+  font-style: italic;
+  &:hover {
+    color: silver;
+    text-decoration: none;
+  }
 }
 
-#logo:hover {
-  color: #fff;
-  text-decoration: none;
-}
 
 /* デバッグウインドウ */
 
@@ -95,4 +120,8 @@ p {
   .form-control {
     color: $state-danger-text;
   }
+}
+
+.col-md-4 h2 {
+  font-size: 2.7em;
 }
