--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,24 +1,24 @@
-<% provide(:title, 'Sign up') %>
-<h1>ユーザー登録</h1>
+<% provide(:title, 'Edit User') %>
+<h1>ユーザー情報の更新</h1>
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
     <%= form_with(model: @user, local: true) do |f| %>
       <%= render 'shared/error_messages.user' %>
       
-      <%= f.label :name, class: "label-signup" %>
+      <%= f.label :name, class: "label-user--edit" %>
       <%= f.text_field :name, class: "form-control" %>
 
-      <%= f.label :email, class: "label-signup" %>
+      <%= f.label :email, class: "label-user--edit" %>
       <%= f.email_field :email, class: "form-control" %>
 
-      <%= f.label :password, class: "label-signup" %>
+      <%= f.label :password, class: "label-user--edit" %>
       <%= f.password_field :password, class: "form-control" %>
 
-      <%= f.label :password_confirmation, "パスワード再入力", class: "label-signup" %>
+      <%= f.label :password_confirmation, "パスワード再入力", class: "label-user--ed" %>
       <%= f.password_field :password_confirmation, class: "form-control" %>
 
-      <%= f.submit "Sign Up", class: "btn btn-primary btn-block btn-signup" %>
+      <%= f.submit "更新", class: "btn btn-primary btn-block btn-user--edit" %>
     <% end %>
   </div>
 </div>
