Finish-deleting-users

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -60,7 +60,7 @@ p {
 
 a {
   font-weight: bold;
-  color: #fff !important;  
+  color: #000 !important;  
   &:hover {
     color: #808080 !important;
     text-decoration: none;
@@ -72,7 +72,7 @@ a {
   color: #fff !important;  
   &:hover {
     color: #808080 !important;
-    text-decoration: none;
+    text-decoration: none;  
   }
 }
 
