--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -15,7 +15,7 @@
         </tr>
         <tr>
           <th class="active col-md-2">タスクの詳細</th>
-          <td class="col-md-10"><%= raw Rinku.auto_link(@task.description).html_safe %></td>
+          <td class="col-md-10"><%= raw Rinku.auto_link(@task.description) %></td>
         </tr>
         <tr>
           <th class="active col-md-2">作成日</th>
