--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,11 +5,17 @@
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to "トップ", root_path, id: "header-list" %></li>
         <% if logged_in? %>
+        
+          <li>
+            <%= link_to "利用者一覧", users_path, id: "header-list"  %>
+          </li>
+          
           <li>
             <%= link_to "タスク作成", new_user_task_path(current_user), id: "header-list" %>
           </li>
+          
           <li class="dropdown">
-            <a href="#", class="dropdown-toggle-split" data-toggle="dropdown">
+            <a href="#", class="dropdown-toggle" data-toggle="dropdown">
             <%= current_user.name %> <b class="caret"></b>
             </a>
             <ul class="dropdown-menu">
