--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -16,7 +16,7 @@
       <tbody>
         <% @tasks.each do |task| %>
           <tr>
-            <td><%= task.name %></td>
+            <td><%= link_to "#{task.name}", user_task_path(@user,task) %></td>
             <td><%= task.created_at %></td>
             <td><%= link_to "編集", edit_user_task_path(@user, task), class: "btn btn-lg btn-success" %></td>
             <td><%= link_to "削除", user_task_path(@user, task), method: :delete,
